--- a/style/mobile/components/navbar/v2/_var.less
+++ b/style/mobile/components/navbar/v2/_var.less
@@ -2,7 +2,7 @@
 @navbar-bg-color: var(--td-navbar-bg-color, @bg-color-container);
 @navbar-height: var(--td-navbar-height, 48px);
 @navbar-right: var(--td-navbar-right, 95px); // 默认右上角胶囊按钮宽度，组件会在初始化时尝试自动获取胶囊按钮宽度并覆写该值
-@navbar-padding-top: var(--td-navbar-padding-top, 20px); // 导航栏顶部间距，组件会在初始化时尝试取右侧系统胶囊位置进行覆盖
+@navbar-padding-top: var(--td-navbar-padding-top, 0); // 导航栏顶部间距，组件会在初始化时尝试取右侧系统胶囊位置进行覆盖
 @navbar-title-font-size: var(--td-navbar-title-font-size, 18px);
 @navbar-title-font-weight: var(--td-navbar-title-font-weight, 600);
 @navbar-left-arrow-size: var(--td-navbar-left-arrow-size, 24px);
